<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">陌遇</string>
    <string name="action_settings">更换头像</string>
    <string name="hello_world">Hello world!</string>
    <string name="chat_to_chat">聊聊</string>
    <string name="friends">朋友</string>
    <string name="mood">心情</string>
    <string name="meet">相遇</string>
    <string name="set_up">设置</string>
    <string name="repa">记住密码</string>
    <string name="fopa">忘记密码</string>
    <string name="login">登陆</string>
    <string name="newUser">新用户</string>
    <string name="back">返回</string>
    <string name="auto">自动登录</string>
    <string name="pl">请输入账号</string>
    <string name="pp">请输入密码</string>
    <string name="pni">请输入昵称</string>
    <string name="next">下一步</string>
    <string name="register">注册</string>
    <string name="send">发送</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="publishmood">发布心情</string>
    <string name="subimt">提交</string>
    <string name="ppm">请输入你的心情</string>
    <string name="add">添加</string>
    <string name="detail">详情</string>
    <string name="username">用户名</string>
    <string name="time_place_apart">时间|地点|相距1km</string>
    <string name="help">赞</string>
    <string name="stamp">踩</string>
    <string name="discuss">评论</string>
    <string name="sendmood">发心情</string>
    <string name="qunzu">群组</string>
    <string name="lianxirem">联系人</string>
    <string name="wodequn">我的群</string>
    <string name="wodeunzu">我的群组</string>
    <string name="taolunzu">讨论组</string>
    <string name="myfriend">我的好友</string>
    <string name="renmaiquan">人脉圈</string>
    <string name="tongxunlu">通讯录</string>
    <string name="life">生活服务</string>
    <string name="liulan">浏览222222次</string>
    <string name="shuoshuo">其实我想说。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。。</string>
    <string name="time">今天12:00</string>
    <string name="xiangqing">详情</string>
    <string name="name_1">UserName</string>
    <string name="zhanghaoguanli">账号管理</string>
    <string name="xiaoxiguanli">消息管理</string>
    <string name="chathistry">聊天记录</string>
    <string name="weizhifuwu">位置服务</string>
    <string name="quanxianyinsi">权限隐私</string>
    <string name="info">消息通知</string>
    <string name="asforour">关于我们</string>
    <string name="camera">拍照</string>
	<string name="album">从相册中选择</string>
	<string name="give_up">取消</string>
	<string name="choose">选择</string>
	<string name="subimt_xiang_1">图片</string>
	<string name="subimt_xiang_2">点击说话</string>
    <string name="subimt_xiang_3">心情</string>
	<string name="subimt_xiang_4">视频</string>
	<string name="subimt_xiang_5">音乐</string>
 	<string name="subimt_xiang_6">显示位置</string>
	<string name="subimt_xiang_7">好友圈</string>
	<string name="subimt1">取消</string>
    
	</resources>
