<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#50A9E9"
        android:layout_weight="0.7">
        <Button 
            android:id="@+id/quxiao"
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:text="@string/subimt1"
            android:background="@null"/>
        <TextView 
            android:layout_width="150dip"
            android:layout_height="40dip"
            android:gravity="center"
            android:text="@string/publishmood"
            style="@style/font_26"
           />
        <Button
            android:id="@+id/tijiao" 
            android:layout_width="80dip"
            android:layout_height="40dip"
            android:text="@string/subimt"
            android:background="@null"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:layout_weight="10"
        android:orientation="vertical">
        <EditText
	        android:id="@+id/miaoshu"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/ppm"
	        android:inputType="textMultiLine"
	        style="@null">
	        <requestFocus />
	    </EditText>

        <ImageView
            android:id="@+id/imageView_tupian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.5">
        <Button
            android:id="@+id/weizhi" 
            android:layout_width="160dip"
            android:layout_height="40dip"
            android:text="@string/subimt_xiang_6"
            android:background="@null"/>
        <Button
            android:id="@+id/haoyouquan" 
            android:layout_width="160dip"
            android:layout_height="40dip"
            android:text="@string/subimt_xiang_7"
            android:background="@null"/>
        
       
    </LinearLayout>
    <View 
        android:layout_width="fill_parent"
        android:layout_height="0.3dip"
        android:background="#000000"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#cccccc"
        android:layout_weight="0.5">
        <Button
            android:id="@+id/tupian" 
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:text="@string/subimt_xiang_1"
            android:background="@null"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/xinqing"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@null"
            android:text="@string/subimt_xiang_3" />

        <Button
            android:id="@+id/yuyin" 
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:text="@string/subimt_xiang_2"
            android:background="@null"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/yinyue" 
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:text="@string/subimt_xiang_4"
            android:background="@null"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/shipin" 
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:text="@string/subimt_xiang_5"
            android:background="@null"
            android:layout_weight="1"/>
        
       
    </LinearLayout>
    

    

</LinearLayout>
