<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="5dip" >
    <Button
        android:id="@+id/album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_cancel_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="#027AFE"
        android:text="@string/album"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#DAD9DB" />

    <Button
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/photo_cancel_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="#027AFE"
        android:text="@string/camera"
        android:textSize="16sp" />

    <Button
        android:id="@+id/give_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:background="@drawable/photo_cancel_selector"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:textColor="#027AFE"
        android:text="@string/give_up"
        android:textSize="16sp" />

</LinearLayout>