<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="#50A9E9">
        <TextView 
            android:layout_width="150dip"
            android:layout_height="30dip"
            android:layout_marginLeft="10dp"
            android:text="@string/xiangqing"
            style="@style/font_26"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <RelativeLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="50dip"
                    android:layout_marginTop="10dip"
                    android:layout_height="50dip"
                    android:src="@drawable/touxiang" />
                
            	<!-- <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="match_parent"
		            android:layout_marginLeft="5dip"
		            android:orientation="vertical" >
		        </LinearLayout> -->

                <TextView
                    android:id="@+id/UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dip"
                    style="@style/font_17"
                    android:layout_marginLeft="10dip"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/imageView1"
                    android:text="@string/name_1" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dip"
                    style="@style/font_color_13"
                    android:layout_centerVertical="true"
                    android:text="@string/time" />			
        	</RelativeLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="60dip"
                android:background="#ccc"
                android:layout_marginRight="10dip"
                android:id="@+id/body">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_marginRight="7dip"
                    android:layout_marginLeft="7dip"
                    android:layout_height="wrap_content"
                    android:text="@string/shuoshuo" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dip"
                    android:src="@drawable/touxiangbg" />
                
            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:orientation="horizontal" >
                <Button
                    android:id="@+id/pinglun"
                    android:layout_width="80dip"
                    android:layout_height="30dip"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:background="#44cccccc"
                    android:text="@string/discuss"
                    style="@style/font_17" />

                <Button
                    android:id="@+id/cai"
                    android:layout_width="80dip"
                    android:layout_height="30dip"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/pinglun"
                    android:layout_marginRight="7dip"
                    android:background="#44cccccc"
                    android:text="@string/stamp"
                    style="@style/font_17"/>

                <Button
                    android:id="@+id/zan"
                    android:layout_width="80dip"
                    android:layout_height="30dip"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="60dp"
                    android:background="#44cccccc"
                    android:text="@string/help"
                    style="@style/font_17" />
            </RelativeLayout>
			<View android:layout_width="fill_parent"
			    android:layout_height="1dip"
			    android:layout_marginTop="5dip"
			    android:background="#ccc"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:layout_height="wrap_content"
                android:text="@string/liulan" />
			<View android:layout_width="fill_parent"
			    android:layout_height="1dip"
			    android:layout_marginTop="5dip"
			    android:background="#ccc"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
