<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:baselineAligned="false"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" >

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/sym_def_app_icon" />

    </RelativeLayout>

    

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3">
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_head">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                 />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:layout_marginLeft="5dp" />
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_head"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/tv_feeling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood" />
        </LinearLayout>	
            
    </RelativeLayout>
    

</LinearLayout>
